--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>登录系统</title>
+  <title>登录系统界面</title>
 
   <!-- 页面基本样式 -->
   <link href="./css/login.css" rel="stylesheet">
