--- a/WebContent/user_index.html
+++ b/WebContent/user_index.html
@@ -10,16 +10,29 @@
   <title>用户</title>
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <!-- layui -->
+  <link rel="stylesheet" href="./css/layui.css">
 
-  <!-- Custom styles for this template -->
+  <!-- 页面样式 -->
   <link href="./css/user_index.css" rel="stylesheet">
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-
+  <!-- jQuery -->
+  <script src="./js/jquery-3.2.1.min.js"></script>
+  <!-- bootstrap -->
+  <script src="./js/bootstrap.min.js"></script>
+  <!-- Validate -->
+  <script src="./js/jquery.validate.js"></script>
+  <!-- bootbox -->
+  <script src="./js/bootbox.min.js"></script>
+  <!-- layui -->
+  <script src="./js/layui.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#" id="reader"></a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="javascript:;">
+      <span class="welcome-u">欢迎您： </span>
+      <span id="reader"></span>
+    </a>
     <!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"> -->
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
@@ -34,21 +47,21 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column my-nav">
             <li class="nav-item" id="menu-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link" href="javascript:;">
                 <span data-feather="home"></span>
                 我的主页
-                <span class="sr-only">(current)</span>
+                <!-- <span class="sr-only">(current)</span> -->
               </a>
             </li>
             <li class="nav-item" id="menu-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="javascript:;">
                 <span data-feather="shopping-cart"></span>
                 查询期刊
               </a>
             </li>
 
             <li class="nav-item" id="menu-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="javascript:;">
                 <span data-feather="users"></span>
                 修改密码
               </a>
@@ -63,10 +76,12 @@
           <h1 class="h2">我的主页</h1>
         </div>
         <div class="page-body">
+          <!-- 遮罩层 -->
+          <div class='cover'></div>
           <!-- 基本信息 包括头像和一些基本的用户信息 -->
           <div class="basic-informaion clearfix">
             <div class="head-logo fl">
-              <img src="img/login-head.gif" alt="">
+              <img src="img/login-head.jpg" alt="">
             </div>
             <div class="detail-information fl">
               <p>
@@ -93,8 +108,7 @@
           </div>
           <!-- 用户借阅信息，当前借阅状态、我的信誉、我的推荐、历史借阅记录 -->
           <div class="borrow-information">
-            <ul class="nav nav-pills" role="tablist">
-
+            <ul class="nav nav-pills main-page-ul" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#home">我的借阅</a>
               </li>
@@ -102,7 +116,7 @@
                 <a class="nav-link" data-toggle="pill" href="#menu1">借阅历史</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#menu2">我的推荐</a>
+                <a class="nav-link" data-toggle="pill" href="#menu2">我要推荐</a>
               </li>
 
             </ul>
@@ -118,7 +132,6 @@
                       <th>期刊代号</th>
                       <th>期刊名称</th>
                       <th>借阅时间</th>
-                      <th>归还时间</th>
                       <th>操作</th>
                     </tr>
                   </thead>
@@ -135,7 +148,6 @@
                       <th>期刊代号</th>
                       <th>期刊名称</th>
                       <th>借阅时间</th>
-                      <th>归还时间</th>
                       <th>备注</th>
                     </tr>
                   </thead>
@@ -153,8 +165,6 @@
                   <button type="button" class="btn btn-info">提交申请</button>
                 </form>
               </div>
-
-
             </div>
           </div>
         </div>
@@ -169,63 +179,27 @@
 
           <form class="form-inline">
             <input type="text" class="form-control" id="key" placeholder="请输入关键词">
-            <button type="button" class="btn btn-primary">查询</button>
+            <button type="button" class="btn btn-primary" id="searching">查询</button>
 
             <label class="radio-inline">
-              <input type="radio" name="optradio">期刊名</label>
+              <input type="radio" name="search_item" value="periodical_name" checked>期刊名</label>
             <label class="radio-inline">
-              <input type="radio" name="optradio">期刊代号</label>
+              <input type="radio" name="search_item" value="periodical_id">期刊代号</label>
             <label class="radio-inline">
-              <input type="radio" name="optradio">作者</label>
-            <label class="radio-inline">
-              <input type="radio" name="optradio">出版社</label>
-
+              <input type="radio" name="search_item" value="press">出版社</label>
           </form>
 
-          <table class="table table-hover text-center">
-            <thead>
-              <tr>
-                <th>期刊代号</th>
-                <th>期刊名</th>
-                <th>出版社</th>
-                <th>可借数量</th>
-                <th>操作</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>5015001</td>
-                <td>川师文摘</td>
-                <td>四川师范大学</td>
-                <td>5</td>
-                <td>
-                  <a href="#">借阅</a>
-                </td>
-              </tr>
-              <tr>
-                <td>5015001</td>
-                <td>川师文摘</td>
-                <td>四川师范大学</td>
-                <td>5</td>
-                <td>
-                  <a href="#">借阅</a>
-                </td>
-              </tr>
-              <tr>
-                <td>5015001</td>
-                <td>川师文摘</td>
-                <td>四川师范大学</td>
-                <td>5</td>
-                <td>
-                  <a href="#">借阅</a>
-                </td>
-              </tr>
-            </tbody>
+          <!-- 查询结果 -->
+          <table class="table table-hover text-center" id="search-result-table">
+
           </table>
+
+          <!-- 分页 -->
+          <div class="paging clearfix" id="search-result-page">
+
+          </div>
         </div>
       </main>
-
-
 
       <main role="main" id="search-book" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 hidden">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
@@ -254,15 +228,30 @@
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-<!--   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="./js/popper.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
--->
+  <!-- 模态框 -->
+  <div class="modal fade" id="borrow-book">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- 模态框头部 -->
+        <div class="modal-header">
+          <h4 class="modal-title">模态框头部</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+   
+        <!-- 模态框主体 -->
+        <div class="modal-body">
+          模态框内容..
+        </div>
+   
+        <!-- 模态框底部 -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+        </div>
+   
+      </div>
+    </div>
+  </div>
+
   <!-- Icons -->
   <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
   <script>
@@ -271,52 +260,6 @@
 
   <!-- Graphs -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-
-  <!-- Validate -->
-  <script src="js/jquery.validate.js"></script>
-
-
-  <script>
-
-    let $main_items = $("main");
-
-    $(".nav>li#menu-item").click(function () {
-      // alert($main_items.length);
-      let index = $(this).index();
-
-      // 切换显示右侧内容
-      $main_items.css("display", "none");
-      $main_items[index].style.display = "block";
-
-      // 改变当前的导航样式
-      $(".nav>li>a").removeClass("active");
-      $(this).children("a").addClass("active");
-
-    });
-
-    // 验证更改密码
-    $("#change-psd").validate({
-      rules: {
-        "again-psd": {
-          equalTo: "#new-psd"
-        }
-      },
-      messages: {
-        "old-psd": "请输入旧密码！",
-        "new-psd": "请输入新密码！",
-        "again-psd": {
-          required: "请再次输入您的新密码",
-          equalTo: "两次密码输入不一致"
-        }
-
-      }
-    }
-
-    );
-  </script>
-
-  <!-- 测试JSON数据 -->
-  <script src="test_data/test_borrow_JSON.js"></script>
 
   <!-- import JS -->
  
