--- a/WebContent/user_index.html
+++ b/WebContent/user_index.html
@@ -220,7 +220,7 @@
               <label for="pwd" id="label">请再次输入新密码：</label>
               <input type="password" name="again-psd" required>
             </div>
-            <button type="submit" class="btn btn-primary">提交</button>
+            <button type="button" id="submint_password" class="btn btn-primary">提交</button>
           </form>
 
         </div>
