用户界面完成

--- a/WebContent/user_index.html
+++ b/WebContent/user_index.html
@@ -36,7 +36,7 @@
     <!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"> -->
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="./login.html">退出系统</a>
+        <a class="nav-link" href="logoutServlet">退出系统</a>
       </li>
     </ul>
   </nav>
@@ -185,7 +185,7 @@
             <label class="radio-inline">
               <input type="radio" name="search_item" value="periodicalName" checked>期刊名</label>
             <label class="radio-inline">
-              <input type="radio" name="search_item" value="periodicalID">期刊代号</label>
+              <input type="radio" name="search_item" value="issue">期号</label>
             <label class="radio-inline">
               <input type="radio" name="search_item" value="press">出版社</label>
           </form>
