--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -25,14 +25,13 @@
   <script src="./js/bootstrap.min.js"></script>
   <!-- 弹出框 -->
   <script src="./js/bootbox.min.js"></script>
-  <script src="./js/login.js"></script>
   
 </head>
 
 
 <body class="text-center">
   <!-- 登录表单 -->
-  <form class="form-signin" action="login/success.php" method="post">
+  <form class="form-signin" action="#" method="post">
     <h1 class="title h3 mb-3 font-weight-normal">公司期刊管理系统</h1>
     <br>
     <br>
@@ -49,10 +48,43 @@
       <span id="labelTip">滑动解锁</span>
     </div>
 
-    <button id="btn_login" class="btn btn-lg btn-primary btn-block hidden" name="btn" type="button">登录</button>
+    <button id="btn_login" class="btn btn-lg btn-primary btn-block hidden" name="btn" type="submit">登录</button>
     <input type="text" class="hidden" id="message_text" name="message">
 
     <p class="mt-5 mb-3 text-muted">&copy; 软件工程第9组</p>
   </form>
+  
+  <script>
+
+    $(function () {
+      // 显示登录按钮
+      let slider = new SliderUnlock("#slider", {}, function () {
+        $("#btn_login").removeClass("hidden");
+      });
+      slider.init();
+
+      // 弹出框提醒
+      $("#btn_login").click(function () {
+    	var message = $("#message_text").val();
+        let username = $("#inputUsername").val();
+        let password = $("#inputPassword").val();
+
+        if (username.length === 0) {
+          bootbox.alert("请输入用户名！");
+          return false;
+        }
+
+        if (password.length === 0) {
+          bootbox.alert("请输入密码！");
+          return false;
+        }
+        if(message.length != 0){
+        	bootbox.alet(message);
+        }
+      });
+
+    }); // end $(function);
+
+  </script>
 </body>
 </html>
