第一次合并

--- a/WebContent/user_index.html
+++ b/WebContent/user_index.html
@@ -46,7 +46,7 @@
       <nav class="col-md-2 d-none d-md-block bg-light sidebar">
         <div class="sidebar-sticky">
           <ul class="nav flex-column my-nav">
-            <li class="nav-item" id="menu-item">
+            <li class="nav-item user-home" id="menu-item">
               <a class="nav-link" href="javascript:;">
                 <span data-feather="home"></span>
                 我的主页
