第二次合并

--- a/WebContent/manager_index.html
+++ b/WebContent/manager_index.html
@@ -255,7 +255,7 @@
               <button type="button" id="subtract">-</button>
               <button type="button" id="add">+</button>
 
-              <input type="button" value="提交" class="btn btn-primary">
+              <input type="button" value="提交" class="add_periodical_btn btn btn-primary">
             </form>
           </div>
 
