--- a/WebContent/user_index.html
+++ b/WebContent/user_index.html
@@ -27,6 +27,7 @@
   <!-- layui -->
   <script src="./js/layui.js"></script>
 </head>
+
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="javascript:;">
@@ -160,7 +161,7 @@
               <div id="menu2" class="container tab-pane fade">
                 <br>
                 <h3>我要推荐</h3>
-                <form action="#" class="form-group">
+                <form action="#" class="form-group clearfix">
                   <label for="new-book">请输入要推荐的期刊名称：</label>
                   <input type="text" class="form-control" id="new-book">
                   <button type="button" class="btn btn-info">提交申请</button>
@@ -210,7 +211,7 @@
           <form id="change-psd">
             <div>
               <label for="pwd" id="label">请输入旧密码：</label>
-              <input type="password" name="old-psd" id="old-psd" required>
+              <input type="password" class="" name="old-psd" id="old-psd" maxlength="15" required>
             </div>
             <div>
               <label for="pwd" id="label">请输入新密码：</label>
@@ -218,9 +219,9 @@
             </div>
             <div>
               <label for="pwd" id="label">请再次输入新密码：</label>
-              <input type="password" id="again-psd" required>
+              <input type="password" id="again-psd" name="again-psd" required>
             </div>
-            <button type="button" id="submint_password" class="btn btn-primary">提交</button>
+            <button type="submit" id="submint_password" class="btn btn-primary">提交</button>
           </form>
 
         </div>
@@ -238,29 +239,24 @@
           <h4 class="modal-title">借阅书籍</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-   
+
         <!-- 模态框主体 -->
         <div class="modal-body">
-          
+
         </div>
-   
-    
+
+
 
       </div>
     </div>
   </div>
 
-  <!-- Icons -->
-  <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-  <script>
-    feather.replace()
-  </script>
 
   <!-- Graphs -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
   <!-- import JS -->
- 
+
   <script src="js/user_index.js"></script>
 
 </body>
